src/objects/CRAFFT__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>CRAFFTs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assessment_Recommended__c</fullName>
        <formula>Total_Score__c &gt; 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Recommended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Result__c</fullName>
        <formula>IF( Assessment_Recommended__c, &apos;Referral Recommended&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A1_Drink_any_alcohol__c</fullName>
        <inlineHelpText>During the past 12 months, did you drink any alcohol (more than a few sips)? (Do not count sips of alcohol taken during family or religious events.)&quot;</inlineHelpText>
        <label>Drink any alcohol?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A2_Smoke_any_marijuana_or_hashish__c</fullName>
        <inlineHelpText>During the past 12 months, did you smoke any marijuana or hashish?</inlineHelpText>
        <label>Smoke any marijuana or hashish</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_A3_Use_anything_else_to_get_high__c</fullName>
        <inlineHelpText>During the past 12 months, did you use anything else to get high? (anything else includes illegal drugs, over the counter and prescription drugs, and things that you sniff or huff)</inlineHelpText>
        <label>Use anything else to get high?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B1_In_CAR_driven_by_someone_high__c</fullName>
        <inlineHelpText>Have you ever ridden in a CAR driven by someone (including yourself) who was “high” or had been using alcohol or drugs?</inlineHelpText>
        <label>In CAR driven by someone high?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B2_Use_drugs_or_alcohol_to_RELAX__c</fullName>
        <inlineHelpText>Do you ever use alcohol or drugs to RELAX, feel better about yourself, or fit in?</inlineHelpText>
        <label>Use drugs or alcohol to RELAX</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B3_Use_drugs_or_alcohol_ALONE__c</fullName>
        <inlineHelpText>Do you ever use alcohol or drugs while you are by yourself, or ALONE?</inlineHelpText>
        <label>Use drugs or alcohol ALONE?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B4_Ever_FORGET_what_you_did__c</fullName>
        <inlineHelpText>Do you ever FORGET things you did while using alcohol or drugs?</inlineHelpText>
        <label>Ever FORGET what you did</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B5_FAMILY_FRIENDS_say_to_cut_down__c</fullName>
        <inlineHelpText>Do your FAMILY or FRIENDS ever tell you that you should cut down on your drinking or drug use?</inlineHelpText>
        <label>FAMILY/FRIENDS say to cut down</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_B6_In_TROUBLE_while_using_drugs__c</fullName>
        <inlineHelpText>Have you ever gotten into TROUBLE while you were using alcohol or drugs?</inlineHelpText>
        <label>In TROUBLE while using drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRAFFT_Yes_in_Part_A__c</fullName>
        <formula>or(ispickval(CRAFFT_A1_Drink_any_alcohol__c ,&quot;Yes&quot;), 
ispickval(CRAFFT_A2_Smoke_any_marijuana_or_hashish__c ,&quot;Yes&quot;), 
ispickval(CRAFFT_A3_Use_anything_else_to_get_high__c ,&quot;Yes&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yes in Part A?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <formula>if(ispickval(CRAFFT_B1_In_CAR_driven_by_someone_high__c ,&quot;Yes&quot;),1,0) 
+ if(ispickval(CRAFFT_B2_Use_drugs_or_alcohol_to_RELAX__c ,&quot;Yes&quot;),1,0)
+ if(ispickval(CRAFFT_B3_Use_drugs_or_alcohol_ALONE__c ,&quot;Yes&quot;),1,0) 
+ if(ispickval(CRAFFT_B4_Ever_FORGET_what_you_did__c ,&quot;Yes&quot;),1,0) 
+ if(ispickval(CRAFFT_B5_FAMILY_FRIENDS_say_to_cut_down__c ,&quot;Yes&quot;),1,0) 
+ if(ispickval(CRAFFT_B6_In_TROUBLE_while_using_drugs__c ,&quot;Yes&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>aCRAFFT</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>CRAFFT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aCRAFFTs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>